{
  "browse": "Bazaar",
  "categories": "Categories",
  "saved": "Saved",
  "chat": "Chats",
  "profile": "Me",
  "myListings": "My Shop",
  "createListing": "New Listing",
  "sellerDashboard": "Seller Dashboard"
...
